[tool.poetry]
name = "introduction-to-large-language-models"
version = "0.1.0"
description = ""
authors = ["masayukeeeee <masayukeeeee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.9"
transformers = "^4.35.2"
fugashi = "^1.3.0"
ipadic = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
